--- a/style.css
+++ b/style.css
@@ -1,8 +1,27 @@
+body {
+    background: white; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#ffffff, #737e8b); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#ffffff, #737e8b); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#ffffff, #737e8b); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#ffffff, #737e8b); /* Standard syntax */
+}
+
+.element {
+  color: black;
+  font-size: 50px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
 
 .pure-menu-horizontal {
+  font-family: 'Inconsolata';
   text-align: center;
   margin-top: 30px;
   text-transform: uppercase;
+  font-size: 25px;
 }
 
 li {
@@ -13,27 +32,75 @@ li {
 li:last-child {
   border-right: none;
 }
+ 
+.pure-menu-link {
+  color: #FF847C;;
+} 
 
-.pure-u-1 {
+.pure-u-1.welcome{
   margin-top: 250px;
-  text-align: center;
 }
 
 h1 {
+  font-family: 'Inconsolata';
   vertical-align: middle;
+  text-align: center;
 }
 
-.pure-g {
-  margin: 50px;
+p {
+  font-family: 'Droid Sans', sans-serif;
 }
+
+
+.pure-g {
+  margin: 280px;
+}
+
+.pure-g > div {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
 .pure-u-1-2 {
   padding-top: 100px;
 }
-.img{
-  width: 18px;
+
+.pure-u-1.icons {
+  text-align: center;
 }
 
-.dev-icons {
-  list-style: none;
+.icons{
+  font-size: 50px;
+  padding-top: 50px;
+  word-spacing: 10px;
+  color: #E84A5F;
 }
 
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:.5; }
+    100% { opacity:.8; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:.5; }
+    100% { opacity:.8; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:.5; }
+    100% { opacity:.8; }
+}
+
+.touch {
+  -webkit-overflow-scrolling: touch;
+   overflow-y: scroll;
+}
