--- a/style.css
+++ b/style.css
@@ -24,14 +24,13 @@ section {
   margin: 0 auto;
 }
 
-.about {
-  background-image: url('gplaypattern.png');
-  width: 100%;
+/*.about {
+  background-image: url('gplaypatt.png');
+  width: 100%;*/
 /*  background-size: cover;*/
-}
+/*}*/
 
-#about-me {
-
+#me{
   width: 100%;
   height: 100vh;
   display: table-cell;
