--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     background: linear-gradient(#ffffff, #737e8b); /* Standard syntax */
 }
 
+#menu {
+  z-index: 1000;
+}
+
 #welcome-box {
   width: 100%;
   height: 100vh;
