--- a/style.css
+++ b/style.css
@@ -28,13 +28,12 @@ section {
   margin: 0 auto;
 }
 
-/*.about {
-  background-image: url('gplaypatt.png');
-  width: 100%;*/
-/*  background-size: cover;*/
-/*}*/
+.about {
+  background-image: url('gplaypattern.png');
+  width: 100%;
+}
 
-#me{
+#about-me{
   width: 100%;
   height: 100vh;
   display: table-cell;
@@ -58,16 +57,22 @@ section {
   display: table-cell;
   vertical-align: middle;
   margin: 0 auto;
-
 }
 
 #portofolio {
   width: 100%;
   height: 100vh;
-  display: table-cell;
+/*  display: table-cell;*/
   vertical-align: middle;
   margin: 0 auto;
+}
 
+.fp-controlArrow.fp-prev {
+  display: none;
+}
+
+.section {
+  text-align: left;
 }
 
 #contact {
@@ -113,9 +118,9 @@ li:last-child {
   color: #FF847C;;
 } 
 
-.pure-u-1.welcome{
+/*.pure-u-1.welcome{
   margin-top: 250px;
-}
+}*/
 
 h1 {
   font-family: 'Inconsolata';
@@ -127,10 +132,6 @@ p {
   font-family: 'Droid Sans', sans-serif;
 }
 
-
-.pure-g {
-/*  margin: 280px;*/
-}
 
 .pure-g > div {
   -webkit-box-sizing: border-box;
@@ -144,10 +145,6 @@ p {
   max-width: none;
 }
 
-
-.pure-u-1-2 {
-/*  padding-top: 100px;*/
-}
 
 .pure-u-1.icons {
   text-align: center;
