--- a/main.css
+++ b/main.css
@@ -16,15 +16,15 @@ body {
   height: auto;
 }
 
+h1, h2, h3, h4{
+  color: #3C3D3E;
+}
 
 #welcome-box {
   width: 100%;
   max-width: none;  
 }
 
-h1, h2, h3, h4{
-  color: #3C3D3E;
-}
 .about {
   background-image: url('gplaypattern.png');
   width: 100%;
@@ -38,20 +38,13 @@ h1, h2, h3, h4{
   margin: 0 auto;
 }
 
-.portrait {
-  width: 300px;
-  /*border-radius: 150px;*/
-}
-
-h2 {
+.about-portrait {
   text-align: center;
 }
 
-.p-about {
-  font-size: 2vh;
-  text-align: left
+h2 {
+text-align: center;
 }
-
 
 #skills-list {
   width: 100%;
@@ -64,202 +57,225 @@ h2 {
 #portofolio {
   width: 100%;
   height: 100vh;
-/*  display: table-cell;*/
   vertical-align: middle;
   margin: 0 auto;
-}
-
-.fp-controlArrow.fp-next {
-  border-color: transparent transparent transparent rgba(255, 132, 124, 0.6) !important;
-  padding-left: 2vh;
-}
-
-.fp-controlArrow.fp-prev {
-  border-color: transparent rgba(255, 132, 124, 0.6) transparent transparent  !important;
-  padding-right: 2vh;  
-}
-
-/*.slide-content {
-  width: 90vh;
-  margin: 0 auto;
-}*/
-
-.slide-content {
-  width: 100%;
-  height: 100vh;
-  display: table-cell;
-  vertical-align: middle;
-  margin: 0 auto;
-  padding: 15vh;
-}
-
-.section {
-  text-align: left;
-/*  background-size: cover;*/
-}
-
-.projects-title {
-  position: absolute;
-  top: 2.2em;
-  margin: auto 0;
-  width: 100%;
 }
 
 .iphone {
   text-align: center;
 }
 
-#redbull-img {
-  height: 375px;
-  margin: auto;
-}
-
-#contact {
-  width: 100%;
-  height: 100vh;
-  display: table-cell;
-  vertical-align: middle;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.element {
-  color: black;
-  font-size: 50px;
-}
-
-a {
+  a {
   text-decoration: none;
   color: black;
 }
 
-nav {
-  background-color: transparent;
-  font-family: 'Inconsolata';
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 25px;
-  position: fixed;
-  top: 0;
-  box-shadow: none;
-}
 
-.pure-menu-item {
-  margin-right: 0px;
-  border-right: 1px solid #aaa;
-  float: none;
-  display: inline;
-}
+  nav {
+    font-size: 1.5vh;
+  }
+  .menu-link {
+  color: #FF847C;
+  font-size: 3.5vh;
+  } 
 
-.pure-menu-item:last-child {
-  border-right: none;
-}
- 
-.pure-menu-link {
-  color: #FF847C;;
-} 
 
-.pure-menu-link:hover, .pure-menu-link:focus {
+  .divider {
+    margin-bottom: 3vh;
+  }
+
+  .portrait {
+    width: 300px;
+    /*border-radius: 150px;*/
+  }
+
+  .p-about {
+    font-size: 2vh;
+    text-align: left;
+    margin: 0 auto;
+  }
+
+
+  .fp-controlArrow.fp-next {
+    border-color: transparent transparent transparent rgba(255, 132, 124, 0.6) !important;
+    padding-left: 2vh;
+  }
+
+  .fp-controlArrow.fp-prev {
+    border-color: transparent rgba(255, 132, 124, 0.6) transparent transparent  !important;
+    padding-right: 2vh;  
+  }
+
+  /*.slide-content {
+    width: 90vh;
+    margin: 0 auto;
+  }*/
+
+  .slide-content {
+    width: 100%;
+    height: 100vh;
+    display: table-cell;
+    vertical-align: middle;
+    margin: 0 auto;
+    padding: 15vh;
+  }
+
+  .section {
+    text-align: left;
+  /*  background-size: cover;*/
+  }
+
+  .projects-title {
+    position: absolute;
+    top: 2.2em;
+    margin: auto 0;
+    width: 100%;
+  }
+
+
+
+  #redbull-img {
+    height: 375px;
+    margin: auto;
+  }
+
+  #contact {
+    width: 100%;
+    height: 100vh;
+    display: table-cell;
+    vertical-align: middle;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .element {
+    color: black;
+    font-size: 50px;
+  }
+
+  nav {
     background-color: transparent;
-    font-weight: bolder;
-}
+    font-family: 'Inconsolata';
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 25px;
+    position: fixed;
+    top: 0;
+    box-shadow: none;
+  }
 
-h1 {
-  font-family: 'Inconsolata';
-  vertical-align: middle;
-  text-align: center;
-  color: #3C3D3E;
-}
+  .menu-item {
+    margin-right: 0px;
+    border-right: 1px solid #aaa;
+    float: none;
+    display: inline;
+  }
 
-p {
-  font-family: 'Droid Sans', sans-serif;
-  color: #3C3D3E;
-}
-
-
-.pure-g > div {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-/*.pure-u-1 {
-  display: table;
-  margin: 0;
-  max-width: none;*/
-/*  border-collapse: separate;
-  border-spacing: 10px;*/
-/*}*/
+  .menu-item:last-child {
+    border-right: none;
+  }
+   
 
 
-.icon {
-  font-size: 2.5vh;
- /* color: #3C3D3E; computer screen grey*/
-  color: #f5f5f5;
+
+  nav ul li.active, nav ul a:hover {
+      background-color: transparent;
+      font-weight: bolder;
+  }
+
+  h1 {
+    font-family: 'Inconsolata';
+    vertical-align: middle;
+    text-align: center;
+    color: #3C3D3E;
+  }
+
+  p {
+    font-family: 'Droid Sans', sans-serif;
+    color: #3C3D3E;
+  }
+
+
+  .pure-g > div {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+
+
+
+  .icon {
+    font-size: 2.5vh;
+   /* color: #3C3D3E; computer screen grey*/
+    color: #f5f5f5;
+    margin: .5vh;
+  }
+
+  .sm-icon {
+    color: #E84A5F;
+    font-size: 2vh;
+  }
+
+  .icon-sm {
+    font-size: 2vh;
+    color: #f5f5f5; 
+  }
+
+  .lg-icon {
+    color: #E84A5F;
+    font-size: 3vh;
+  }
+
+  .fa {
   margin: .5vh;
-}
+  }
 
-.sm-icon {
-  color: #E84A5F;
-  font-size: 2vh;
-}
+  .pure-button {
+    border-radius: 8px;
+    background-color: #E84A5F;
+    color: white;
 
-.icon-sm {
-  font-size: 2vh;
-  color: #f5f5f5; 
-}
+  }
 
-.lg-icon {
-  color: #E84A5F;
-  font-size: 3vh;
-}
+  .firebase {
+    height: 3vh;
+    display: inline-block;
+  }
 
-.fa {
-margin: .5vh;
-}
+  footer {
+    text-align: center;
+    color: #E84A5F;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 250px;
+    width: 100%;
+  }
 
-.pure-button {
-  border-radius: 8px;
-  background-color: #E84A5F;
-  color: white;
+  .footer-li {
+    display: inline;
+    text-decoration: none;
+    -webkit-text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
+    -moz-text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
+    text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+  }
 
-}
+  .typed-cursor{
+      opacity: 1;
+      -webkit-animation: blink 0.7s infinite;
+      -moz-animation: blink 0.7s infinite;
+      animation: blink 0.7s infinite;
+  }
 
-.firebase {
-  height: 3vh;
-  display: inline-block;
-}
+  .footer-icon {
+    font-size: 50px;
+    margin: 0px 15px 0 15px;
+    padding: 0px 15px 10px 15px;
+    border: 1px solid;
+  }
 
-footer {
-  text-align: center;
-  color: #E84A5F;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 250px;
-  width: 100%;
-}
-
-.footer-li {
-  display: inline;
-  text-decoration: none;
-  -webkit-text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
-  -moz-text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
-  text-shadow: 7px 7px 14px -3px rgba(255,255,255,0.68);
-  margin-left: -0.75rem;
-  margin-right: -0.75rem;
-}
-
-.typed-cursor{
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-}
-
-.footer-icon {
-  font-size: 50px;
-}
 @keyframes blink{
     0% { opacity:1; }
     50% { opacity:.5; }
@@ -280,12 +296,26 @@ footer {
 <= 600px  
 */
 @media (max-width: 600px) {
-  nav {
-    font-size: 9px;
+
+  .menu-link {
+    font-size: 2vh
   }
   nav ul a {
     padding: 0 5px;
   }
+  nav {
+  font-size: 9px;
+  }
+  footer {
+  height: 125px;
+  }
+  .footer-icon {
+    font-size: 25px;
+    margin: 0px 7.5px 0 7.px;
+    padding: 0px 7.5px 5px 7.5px;
+    border: 1px solid;
+  }
+
 
 }
 
@@ -297,8 +327,12 @@ Tablet Devices
 
 }
 /*  
-Desktop Devices 
-> 992px*/
-@media (min-width: 992px) {
 
-}
+/*@media (min-width: 992px) {
+
+}*/
+
+/*Desktop Devices 
+> 992px*/
+/*@media (min-width: 992px) {
+}*/
