--- a/main.css
+++ b/main.css
@@ -76,6 +76,7 @@ h1, h2, h3, h4{
   nav {
     font-size: 1.5vh;
   }
+
   .menu-link {
   color: #FF847C;
   font-size: 3.5vh;
@@ -298,7 +299,7 @@ h1, h2, h3, h4{
 @media (max-width: 600px) {
 
   .menu-link {
-    font-size: 2vh
+    font-size: 1.75vh
   }
   nav ul a {
     padding: 0 5px;
@@ -310,9 +311,8 @@ h1, h2, h3, h4{
   height: 125px;
   }
   .footer-icon {
-    font-size: 25px;
-    margin: 0px 7.5px 0 7.px;
-    padding: 0px 7.5px 5px 7.5px;
+    font-size: 20px;
+    padding: 0px 7px 4.5px 7px;
     border: 1px solid;
   }
   .slide-content {
@@ -322,7 +322,7 @@ h1, h2, h3, h4{
   #redbull-img {
     height: 200px;
     padding-bottom: 25px;
-    margin-top: 5px;
+/*    margin-top: 10vh;*/
   }
 
   .fp-controlArrow.fp-next {
@@ -337,9 +337,30 @@ h1, h2, h3, h4{
   }  
   .projects-title {
     top: .5em;
+    display: none;
   }
 
+  .fp-slidesNav.bottom {
+    display: none;
+  }
+  h2 {
+    font-size: 2rem;
+    line-height: 10%;
+  }
+  h3 {
+    font-size: 1.5rem;
+    line-height: 10%;
+  }
 
+  h4 {
+    font-size: 1.2rem;
+    line-height: 10%;
+  }
+  .btn{
+    height: 30px;
+    line-height: 30px;
+    padding: 0 1rem;
+  }
 
 }
 
@@ -348,8 +369,8 @@ Tablet Devices
 <= 992px 
 */
 @media (max-width: 992px) {
-.menu-link {
-    font-size: 2.5vh;
+/*.menu-link {
+    font-size: 2.5vh;*/
 }
 /*  
 
