--- a/main.css
+++ b/main.css
@@ -21,6 +21,10 @@ h1, h2, h3, h4{
   text-align: center;
 }
 
+.spacer {
+  height: 400px;
+}
+
 #welcome-box {
   width: 100%;
   max-width: none;  
@@ -135,20 +139,14 @@ h1, h2, h3, h4{
     width: 100%;
   }
 
-
-
   #redbull-img {
     height: 375px;
     margin: auto;
   }
 
-  #contact {
-    width: 100%;
-    height: 100vh;
-    display: table-cell;
-    vertical-align: middle;
-    margin: 0 auto;
-    text-align: center;
+  .contact {
+    margin-top: 50px;
+    margin-bottom: 50px; 
   }
 
   .element {
@@ -196,6 +194,7 @@ h1, h2, h3, h4{
   p {
     font-family: 'Droid Sans', sans-serif;
     color: #3C3D3E;
+    text-align: center;
   }
 
 
@@ -238,12 +237,16 @@ h1, h2, h3, h4{
     color: white;
   }
 
+  .links {
+    margin: 0 5px 0 5px;
+  }
+
   .firebase {
     height: 3vh;
     display: inline-block;
   }
 
-  footer {
+/*  footer {
     text-align: center;
     color: #FF847C;
     position: absolute;
@@ -251,6 +254,10 @@ h1, h2, h3, h4{
     bottom: 0;
     height: 250px;
     width: 100%;
+  }*/
+
+  .footer {
+    text-align: center;
   }
 
   .footer-li {
@@ -273,8 +280,8 @@ h1, h2, h3, h4{
   .footer-icon {
     font-size: 50px;
     margin: 0px 15px 0 15px;
-    padding: 0px 15px 10px 15px;
-    border: 1px solid;
+/*    padding: 0px 15px 10px 15px;
+    border: 1px solid;*/
   }
 
 @keyframes blink{
@@ -307,14 +314,18 @@ h1, h2, h3, h4{
   nav {
   font-size: 9px;
   }
-  footer {
+
+  .spacer {
+  height: 200px;
+  }
+  /*footer {
   height: 125px;
   }
   .footer-icon {
     font-size: 20px;
     padding: 0px 7px 4.5px 7px;
     border: 1px solid;
-  }
+  }*/
   .slide-content {
   margin: 0 auto;
   padding: 5vh;
