--- a/main.css
+++ b/main.css
@@ -67,7 +67,11 @@ h1, h2, h3, h4{
   margin: 0 auto;
 }
 
+.whats-that-description {
+  margin-left: 3vh;
+}
 .iphone {
+  margin-left: 3vh;
   text-align: center;
 }
 
@@ -207,7 +211,7 @@ h1, h2, h3, h4{
 
 
   .icon {
-    font-size: 2.5vh;
+    font-size: 3.5vh;
    /* color: #3C3D3E; computer screen grey*/
     color: #f5f5f5;
     margin: .5vh;
