--- a/main.css
+++ b/main.css
@@ -7,11 +7,20 @@
 body {
   background: white; 
 }
+#typed-strings {
+  visibility: hidden;
+}
+
+div.iScrollVerticalScrollbar, .iScrollLoneScrollbar {
+  display: none !important;
+}
+h2#welcome-message {
+  margin-top: 50vh;
+}
 
 #menu {
   z-index: 1000;
 }
-
 .navbar-fixed {
   height: auto;
 }
@@ -19,10 +28,6 @@ body {
 h1, h2, h3, h4{
   color: #3C3D3E;
   text-align: center;
-}
-
-.spacer {
-  height: 400px;
 }
 
 #welcome-box {
@@ -149,7 +154,7 @@ h1, h2, h3, h4{
   }
 
   .contact {
-    margin-top: 50px;
+    margin-top: 25vh;
     margin-bottom: 50px; 
   }
 
@@ -180,9 +185,6 @@ h1, h2, h3, h4{
     border-right: none;
   }
    
-
-
-
   nav ul li.active, nav ul a:hover {
       background-color: transparent;
       font-weight: bolder;
@@ -207,8 +209,6 @@ h1, h2, h3, h4{
     -moz-box-sizing: border-box;
     box-sizing: border-box;
   }
-
-
 
   .icon {
     font-size: 3.5vh;
@@ -284,8 +284,6 @@ h1, h2, h3, h4{
   .footer-icon {
     font-size: 50px;
     margin: 0px 15px 0 15px;
-/*    padding: 0px 15px 10px 15px;
-    border: 1px solid;*/
   }
 
 @keyframes blink{
@@ -322,14 +320,6 @@ h1, h2, h3, h4{
   .spacer {
   height: 200px;
   }
-  /*footer {
-  height: 125px;
-  }
-  .footer-icon {
-    font-size: 20px;
-    padding: 0px 7px 4.5px 7px;
-    border: 1px solid;
-  }*/
   .slide-content {
   margin: 0 auto;
   padding: 5vh;
@@ -337,7 +327,6 @@ h1, h2, h3, h4{
   #redbull-img {
     height: 200px;
     padding-bottom: 25px;
-/*    margin-top: 10vh;*/
   }
 
   .fp-controlArrow.fp-next {
