--- a/main.css
+++ b/main.css
@@ -59,6 +59,13 @@ h1, h2, h3, h4{
   background-image: url('triangular.png');
   width: 100%;
 }
+span a {
+  display: inline-block;
+}
+
+.center {
+  text-align: center;
+}
 
 #skills-list {
   width: 100%;
@@ -76,7 +83,8 @@ h1, h2, h3, h4{
 }
 
 .whats-that-description {
-  margin-left: 5vh !important;
+  /*margin-left: 5vh !important;*/
+  /*text-align: center;*/
 }
 .iphone {
   margin-left: 3vh;
@@ -232,6 +240,9 @@ h1, h2, h3, h4{
 
 .btn {
   background-color: #FF847C !important;
+  height: 40px;
+  line-height: 40px;
+  width: 100px;
 }
   .pure-button {
     border-radius: 8px;
@@ -247,16 +258,6 @@ h1, h2, h3, h4{
     height: 3vh;
     display: inline-block;
   }
-
-/*  footer {
-    text-align: center;
-    color: #FF847C;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 250px;
-    width: 100%;
-  }*/
 
   .footer {
     text-align: center;
@@ -362,6 +363,7 @@ h1, h2, h3, h4{
     height: 30px;
     line-height: 30px;
     padding: 0 1rem;
+    width: 85px;
   }
  .whats-that-description {
   margin-left: auto !important;
